# sumplete-solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
Backend/Source/Algorithm/Version1/: Algorithm.cpp  Algorithm.hpp
Backend/Source/Algorithm/Version2/: Algorithm.cpp  Algorithm.hpp
Backend/Source/Algorithm/Version2/Utils/Trie/: Trie.cpp  Trie.hpp  TrieNode.hpp
Backend/Source/Algorithm/Version2/Utils/ValidSubsetsGeneration/: ValidSubsetsGeneration.cpp
Backend/Source/ValidityChecks/: ValidityChecks.cpp  ValidityChecks.hpp
Backend/Tests/: Main.cpp
Backend/Tests/Algorithm/: Algorithm.cpp
Backend/Tests/Algorithm/Version2/Trie/: Trie.cpp
Backend/Tests/Algorithm/Version2/ValidSubsetsGeneration/: ValidSubsetsGeneration.cpp  ValidSubsetsGeneration.hpp
Backend/Tests/ValidityChecks/: ValidityChecks.cpp
Documentation/: HowToUse.md  Rules.md
Documentation/Algorithm/: Algorithm.md  Trie.md  ValidSubsetsGeneration.md
Documentation/Explanations/: HowToUse.md
Documentation/Explanations/Algorithm/: Algorithm.md  Trie.md  ValidSubsetsGeneration.md
Frontend/: Main.cpp  Main.qml
Frontend/Components/ColsSums/: ColsSums.qml
Frontend/Components/Grid/: Grid.qml
Frontend/Components/GridSizeDropdown/: GridSizeDropdown.qml
Frontend/Components/RowsSums/: RowsSums.qml
Live/: SumpleteSolverApp.js  index.html
Source/: Makefile  Parameters.hpp
Source/Algorithm/: Algorithm.cpp  Algorithm.hpp
Source/Algorithm/Version1/: Algorithm.cpp  Algorithm.hpp
Source/Algorithm/Version2/: Algorithm.cpp  Algorithm.hpp
Source/Algorithm/Version2/Utils/Trie/: Trie.cpp  Trie.hpp  TrieNode.hpp
Source/Algorithm/Version2/Utils/ValidSubsetsGeneration/: ValidSubsetGeneration.cpp  ValidSubsetGeneration.hpp  ValidSubsetsGeneration.cpp  ValidSubsetsGeneration.hpp
Source/Backend/: Parameters.hpp
Source/Backend/Algorithm/Version1/: Algorithm.cpp  Algorithm.hpp
Source/Backend/Algorithm/Version2/: Algorithm.cpp  Algorithm.hpp
Source/Backend/Algorithm/Version2/Utils/Trie/: Trie.cpp  Trie.hpp
Source/Backend/Algorithm/Version2/Utils/ValidSubsetsGeneration/: ValidSubsetsGeneration.cpp
Source/Backend/ValidityChecks/: ValidityChecks.cpp  ValidityChecks.hpp
Source/Frontend/: Main.cpp  Main.qml
Source/Frontend/Components/: ClearButton.qml  ColsSums.qml  Description.qml  Grid.qml  NoSolutionPopup.qml  RowsSums.qml  SolveButton.qml
Source/Frontend/Components/ColsSums/: ColsSums.qml
Source/Frontend/Components/Grid/: Grid.cpp  Grid.hpp  Grid.qml
Source/Frontend/Components/GridSizeDropdown/: GridSizeDropdown.qml
Source/Frontend/Components/Popups/: ErrorPopup.qml  IncompleteInputPopup.qml  Popups.qml
Source/Frontend/Components/RowsSums/: RowsSums.qml
Source/Frontend/Components/SolveButton/: SolveButton.qml
Source/Frontend/MainModule/: MainModule.cpp  MainModule.hpp
Source/ValidityChecks/: ValidityChecks.cpp  ValidityChecks.hpp
Tests/: Main.cpp  Makefile
Tests/Algorithm/: Algorithm.cpp  Algorithm.hpp
Tests/Algorithm/Version2/Trie/: Trie.cpp  Trie.hpp
Tests/Algorithm/Version2/ValidSubsetsGeneration/: ValidSubsetsGeneration.cpp
Tests/Backend/Algorithm/: Algorithm.cpp  Algorithm.hpp
Tests/Backend/Algorithm/Version2/Trie/: Trie.cpp
Tests/Backend/Algorithm/Version2/ValidSubsetsGeneration/: ValidSubsetsGeneration.cpp  ValidSubsetsGeneration.hpp
Tests/Backend/ValidityChecks/: ValidityChecks.cpp  ValidityChecks.hpp
Tests/ValidityChecks/: ValidityChecks.cpp  ValidityChecks.hpp
